aether-ui/kubernetes/gather/gather-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gather
  labels:
    app: gather
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: container.dev.k8s.eha.to
      labels:
        app: gather
    spec:
      containers:
      - name: gather
        image: 387526361725.dkr.ecr.eu-west-1.amazonaws.com/gather-on-aether-dev:latest
        args:
        - start
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /var/www/static
          name: static-assets-volume
        stdin: true
        tty: true
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/static
          name: static-assets-volume
        - name: gather-nginx-config
          mountPath: /etc/nginx/conf.d
      imagePullSecrets:
        - name: regsecret
      volumes:
        - name: static-assets-volume
          emptyDir: {}
        - name: gather-nginx-config
          configMap:
            name: gather-nginx-config
      restartPolicy: Always
