aether-ui/kubernetes/gather/gather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gather
spec:
  type: NodePort 
  ports:
  - name: "gather"
    port: 80
    targetPort: 80
  selector:
    app: gather
status:
  loadBalancer: {}
